# rustcc

./: .gitignore  Cargo.toml
cc/: Cargo.toml
rcc/: Cargo.toml
rcc/resources/: clex.l  declaration.txt  expression.txt  function.txt  keyword.l  operator.l  statement.txt  test.c
rcc/resources/example/: declaration.c  expression.c  statement.c  test1.c
rcc/src/: constant.rs  content_manager.rs  err.rs  lex.rs  lib.rs  main.rs  parser.rs  tests.rs  types.rs  util.rs  writer.rs
rcc/src/compiler/: c_compiler.rs
rcc/src/constant/: str.rs  typ.rs
rcc/src/err/: global_err.rs  lex_error.rs  parser_error.rs  scope_error.rs  type_error.rs
rcc/src/lex/: keyword.rs  lex_core.rs  operator.rs  token_stream.rs
rcc/src/lex/types/: token.rs  token_kind.rs
rcc/src/parser/: declaration.rs  expression.rs  parser_core.rs  parser_decl.rs  parser_expr.rs  parser_extern.rs  parser_function.rs  parser_stmt.rs  semantic.rs  types.rs
rcc/src/parser/semantic/: ast.rs  common.rs  comp_ctx.rs  decl_spec.rs  declarator.rs  sema.rs
rcc/src/parser/semantic/ast/: common.rs  decl.rs  decls.rs  expr.rs  exprs.rs  func.rs  stmt.rs  types.rs  visitor.rs
rcc/src/parser/semantic/ast/decls/: decl.rs  initializer.rs
rcc/src/parser/semantic/ast/exprs/: expr.rs  op.rs
rcc/src/parser/semantic/sema/: decl.rs  expr.rs  scope.rs  sema_struct.rs  sema_type.rs  ty.rs  type_ctx.rs
rcc/src/parser/types/: ast.rs  common.rs  decl_spec.rs  declarator.rs  sema.rs
rcc/src/parser/types/ast/: decl.rs  expr.rs  func.rs  stmt.rs  visitor.rs
rcc/src/parser/types/sema/: decl.rs  decl_chunk.rs  decl_context.rs  decl_spec.rs  sema_context.rs  sema_expr.rs  sema_struct.rs  sema_type.rs  ty.rs
rcc/src/tests/: test_expression.rs  test_lex.rs
rcc/src/types/: parser_context.rs  span.rs  symbol_table.rs
rcc/src/types/lex/: token.rs  token_kind.rs
rcc/src/util/: ap_float.rs  ap_int.rs  utf8.rs
rcc/src/writer/: ast_graph.rs
(+188 files in other folders)
