[package]
name = "rustcc"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["backend", "cc", "common", "macros", "rlex", "rparser"]
resolver = "2"  # 统一依赖解析


[workspace.dependencies]
common = { path = "common" }
macros = { path = "macros" }
heck = "0.5.0"
bitvec = "1.0"
pest = "2"
pest_derive = "2"
indexmap = "2.10.0"
regex = "1.11.1"
askama = "0.14.0"
unescape = "0.1.0"




