[package]
name = "rcc"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap.workspace = true
macros.workspace = true
enum-as-inner = "0.6.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
strum = "0.27.2"
thiserror.workspace = true
crossbeam-channel = "0.5.15"
phf = "0.13.1"
unicode-ident = "1.0.19"


